fix layout bug by rearranging scss file imports

--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -2,11 +2,10 @@
 
 // 600px
 @mixin whenMedium() {
-  @media only screen and (min-width: 37.5em) and (max-width: 56.25em) {
+  @media only screen and (min-width: 37.5em) {
       @content;
   }
 }
-
 
 // 900px
 @mixin whenLarge() {
