--- a/scss/layout/_wrapper.scss
+++ b/scss/layout/_wrapper.scss
@@ -1,23 +1,23 @@
 .wrapper {
   width: 100%;
+  max-width: 114rem; 
   padding-left: $p-5;
   padding-right: $p-5;
   margin-left: auto;
   margin-right: auto;
 
   &--sm { max-width: 60rem; }
-  
-  
-  @include whenMedium { 
+
+  @include whenMedium {
     &--sm-on-md { 
       max-width: 60rem; 
     }
-  } 
+  }
 
   @include whenLarge {
-    &,
-    &--sm-on-md {
-      max-width: 114rem;
+    &--sm-on-md { 
+      max-width: 114rem; 
     }
   } 
+
 }
